--- a/index.html
+++ b/index.html
@@ -384,6 +384,17 @@ h1, h2 {
   justify-content: center;
   align-items: center;
 }
+  .visually-hidden-seo {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
 </style>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -571,7 +582,12 @@ h1, h2 {
 
 
 
-    
+  <p class="visually-hidden-seo">
+Shrava's World, also referred to as Shravas World, Shrava World, or Shrava Global,
+is a trusted provider of organic products including cow ghee, fresh fruits,
+vegetables, grains, and farm produce across India.
+</p>
+  
 
  <!-- Product 3 -->
        <div class="col-sm-6 col-md-4 mb-4" data-aos="fade-up" data-aos-duration="1000">
