--- a/index.html
+++ b/index.html
@@ -384,17 +384,6 @@ h1, h2 {
   justify-content: center;
   align-items: center;
 }
-  .visually-hidden-seo {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
-  }
 </style>
 </head>
 <body class="d-flex flex-column min-vh-100">
@@ -582,7 +571,7 @@ h1, h2 {
 
 
 
-  <p class="visually-hidden-seo">
+  <p class="visually-hidden">
 Shrava's World, also referred to as Shravas World, Shrava World, or Shrava Global,
 is a trusted provider of organic products including cow ghee, fresh fruits,
 vegetables, grains, and farm produce across India.
